--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ h1{
 
 .first
 {
-    font-size: 6em;
-    letter-spacing: -.5rem;
+    font-size: 6rem;
+    letter-spacing: -.2rem;
     background-image: linear-gradient(90deg, rgba(175,175,175,1), rgba(254,254,254,1), rgba(175,175,175,1));
     background-clip: text;
     -webkit-background-clip: text;
@@ -39,16 +39,15 @@ h1{
 
 .second
 {
-    margin: 7.5rem 0;
-    font-size: 1.5em;
+    margin: 1rem 0;
+    font-size: 1.5rem;
     color: #f05a22;
     font-family: 'Funnel Display'; 
 }
 
 img
 {
-    width: 40rem;
-    border-radius: 5rem;
+    width: 20rem;
 }
 
 /* title styles */
